--- a/package.json
+++ b/package.json
@@ -1,40 +1,71 @@
 {
   "name": "iot-data-management",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
+  "description": "IoT Data Management System with RabbitMQ Integration for X-Ray data processing",
+  "author": "PANTOhealth Technical Assessment",
+  "private": true,
   "license": "ISC",
+  "scripts": {
+    "prebuild": "rm -rf dist",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
+  },
   "dependencies": {
-    "@nestjs/common": "^11.1.6",
-    "@nestjs/core": "^11.1.6",
-    "@nestjs/microservices": "^11.1.6",
-    "@nestjs/mongoose": "^11.0.3",
-    "@nestjs/platform-express": "^11.1.6",
-    "@nestjs/swagger": "^11.2.0",
+    "@nestjs/common": "^10.4.8",
+    "@nestjs/core": "^10.4.8",
+    "@nestjs/microservices": "^10.4.8",
+    "@nestjs/mongoose": "^10.0.10",
+    "@nestjs/platform-express": "^10.4.8",
+    "@nestjs/swagger": "^7.4.2",
+    "@nestjs/terminus": "^10.3.0",
     "amqp-connection-manager": "^4.1.14",
-    "amqplib": "^0.10.8",
+    "amqplib": "^0.10.4",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
-    "mongoose": "^8.17.1",
+    "class-validator": "^0.14.1",
+    "env-var": "^7.5.0",
+    "mongoose": "^8.8.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^11.0.10",
-    "@nestjs/testing": "^11.1.6",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^24.3.0",
-    "@types/supertest": "^6.0.3",
-    "jest": "^30.0.5",
-    "nodemon": "^3.1.10",
-    "supertest": "^7.1.4",
-    "ts-jest": "^29.4.1",
+    "@nestjs/cli": "^10.4.5",
+    "@nestjs/testing": "^10.4.8",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.2",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "rimraf": "^5.0.10",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.7.2"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   }
 }
